# elegant-progressbars-for-a-more-civilized-age

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  elegant-progressbar-for-a-more-civilized-ageConfig.cmake  elegant-progressbar-for-a-more-civilized-ageConfigVersion.cmake
examples/: progressbar_example.cc  progressbar_example.cpp
include/: version.hpp
include/elegant-progressbars/: CustomLabel.hpp  Hourglass.hpp  Pattern.hpp  Spinner.hpp  all_policies.hpp  fancyProgressbar_legacy.hpp  policyProgressbar.hpp  printPattern_legacy.hpp  version.hpp
include/elegantProgressbars/: Hourglass.hpp  Label.hpp  Newline.hpp  Pattern.hpp  Percentage.hpp  Time.hpp  all_policies.hpp  fancyHostClass.hpp  fancyHourglass.hpp  fancyProgressbar.hpp  fancyProgressbar_legacy.hpp  printHourglass.hpp  printPattern.hpp  printPercentage.hpp  printTime.hpp  printTime_legacy.hpp
